--- a/ShellyMQTT.indigoPlugin/Contents/info.plist
+++ b/ShellyMQTT.indigoPlugin/Contents/info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>PluginVersion</key>
-	<string>0.0.2</string>
+	<string>0.0.3</string>
 	<key>ServerApiVersion</key>
 	<string>2.0</string>
 	<key>IwsApiVersion</key>
@@ -13,9 +13,13 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.lionsheeptechnology.ShellyMQTT</string>
 	<key>CFBundleVersion</key>
-	<string>1.0.0</string>
+	<string>1.0.1</string>
 	<key>CFBundleURLTypes</key>
 	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>https://www.github.com/HackintoshMan/ShellyMQTT</string>
+		</dict>
 	</array>
 </dict>
 </plist>
