--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -14,7 +14,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install mock
+        pip install mock Twisted
     - name: Run test suite
       run: |
-        python -m unittest discover ShellyMQTT.indigoPlugin/Contents/Server\ Plugin -p "Test*" -v
+        # python -m unittest discover ShellyMQTT.indigoPlugin/Contents/Server\ Plugin -p "Test*" -v
+        cd ShellyMQTT.indigoPlugin/Contents/Server\ Plugin
+        python -m twisted.trial Test_*
