--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -18,4 +18,4 @@ jobs:
     - name: Run test suite
       run: |
         cd ShellyMQTT.indigoPlugin/Contents/Server\ Plugin
-        python -m twisted.trial $(ls -1 tests/test_*.py | cut -f 1 -d '.' | sed "s/\//./g")
+        sh ./UnitTests.sh
