--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -4,7 +4,8 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: [macos-latest]
+    #runs-on: [macos-latest]
+    runs-on: [ubuntu-latest]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 2.7
