--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -4,8 +4,7 @@ on: [push, pull_request]
 
 jobs:
   build:
-    #runs-on: [macos-latest]
-    runs-on: [ubuntu-latest]
+    runs-on: [macos-latest]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 2.7
@@ -19,4 +18,5 @@ jobs:
     - name: Run test suite
       run: |
         cd ShellyMQTT.indigoPlugin/Contents/Server\ Plugin
-        sh ./UnitTests.sh
+        python -m twisted.trial tests.test_Shelly
+        PYTHONPATH=${PWD}/tests python -m twisted.trial $(ls -1 tests/test_*.py | cut -f 1 -d '.' | sed "s/\//./g")
