--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -3,21 +3,35 @@ name: ShellyMQTT Test Suite
 on: [push, pull_request]
 
 jobs:
-  build:
+  test:
     runs-on: [macos-latest]
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Python 2.7
       uses: actions/setup-python@v1
       with:
         python-version: 2.7
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install mock Twisted
+
     - name: Run test suite
       run: |
         cd ShellyMQTT.indigoPlugin/Contents/Server\ Plugin
         mv tests/mocking .
         mv tests/test_*.py .
         python -m twisted.trial $(ls -1 test_*.py | cut -f 1 -d '.' | sed "s/\//./g")
+
+  package:
+    needs: test
+    runs-on: [macos-latest]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Archive Release
+        uses: thedoctor0/zip-release@master
+        with:
+          filename: 'ShellyMQTT.indigoPlugin.zip'
+          exclusions: '*.git* '
