Updated the archive step to zip with the correct name in the github actions.

--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Archive Release
         uses: thedoctor0/zip-release@master
         with:
-          filename: 'ShellyMQTT.indigoPlugin.zip'
+          filename: 'ShellyMQTT.indigoPlugin'
           exclusions: '*.git* '
 
       - name: Upload Release as Artifact
